Add RandomSelect and fix other-modules field
Ignore-this: d5cdedbe4c7eedceddbd9805142f7df8

darcs-hash:29633f1c35e3fc351f501c2dda445e22382ac298

--- a/deltasnp.cabal
+++ b/deltasnp.cabal
@@ -16,7 +16,7 @@ Description:   Using Agresti-Coull estimation of confidence interval, report
 Executable deltasnp
     Hs-Source-Dirs:  src
     Main-Is:         Main.hs
-    Other-Modules:   AgrestiCoull, MPileup
-    Build-Depends:   base >= 4 && < 5
+    Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants
+    Build-Depends:   base >= 4 && < 5, random, mtl
     Ghc-Options:     -rtsopts -Wall
 
