--- a/deltasnp.cabal
+++ b/deltasnp.cabal
@@ -17,6 +17,6 @@ Executable deltasnp
     Hs-Source-Dirs:  src
     Main-Is:         Main.hs
     Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants
-    Build-Depends:   base >= 4 && < 5, random, mtl
+    Build-Depends:   base >= 4 && < 5, random, mtl, parallel
     Ghc-Options:     -rtsopts -Wall
 
