make parallel default
Ignore-this: 41d61ef202ecc15ea2f1341fae0586cf

darcs-hash:fd73b584720dc45fc2ec5ccd59556412cec3c071

--- a/deltasnp.cabal
+++ b/deltasnp.cabal
@@ -18,5 +18,5 @@ Executable deltasnp
     Main-Is:         Main.hs
     Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants
     Build-Depends:   base >= 4 && < 5, random, mtl, parallel
-    Ghc-Options:     -rtsopts -Wall
+    Ghc-Options:     -rtsopts -Wall -threaded -with-rtsopts=-N
 
