rename to varan
Ignore-this: b02a9b5c35c438e4e4a82f88ac6f8575

darcs-hash:a4a92cb8ac62a35760d62d05aa8677329fbf9232

--- a/varan.cabal
+++ b/varan.cabal
@@ -1,4 +1,4 @@
-Name:          deltasnp
+Name:          varan
 Version:       0.1
 License:       GPL
 Cabal-Version: >= 1.6
@@ -13,7 +13,7 @@ Description:   Using Agresti-Coull estimation of confidence interval, report
 	       '*' for 99%).
 
 -- Using IO arrays (baseline)
-Executable deltasnp
+Executable varan
     Hs-Source-Dirs:  src
     Main-Is:         Main.hs
     Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants
