--- a/varan.cabal
+++ b/varan.cabal
@@ -15,7 +15,7 @@ Description:   Using Agresti-Coull estimation of confidence interval, report
 Executable varan
     Hs-Source-Dirs:  src
     Main-Is:         Main.hs
-    Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants
+    Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants, Metrics
     Build-Depends:   base >= 4 && < 5, random, mtl, parallel
     Ghc-Options:     -rtsopts -Wall 
 
