--- a/varan.cabal
+++ b/varan.cabal
@@ -15,8 +15,8 @@ Description:   Using Agresti-Coull estimation of confidence interval, report
 Executable varan
     Hs-Source-Dirs:  src
     Main-Is:         Main.hs
-    Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants, Metrics
-    Build-Depends:   base >= 4 && < 5, random, mtl, parallel
+    Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants, Metrics, Options
+    Build-Depends:   base >= 4 && < 5, random, mtl, parallel, statistics, cmdargs
     Ghc-Options:     -rtsopts -Wall 
 
 -- For parallel execution, we might want to add these, but they
