Use ByteStrings for input and output
Ignore-this: 467f905911235df5c13e5fdf703c691c
This makes things about three times faster.

readPile1 can still be improved by omitting the [Variant] data
structure, but this likely only makes a difference when working on a
lot of files simultaneously.

darcs-hash:11eb9bb333b26eec06ed1b54404da287fd501e6a

--- a/varan.cabal
+++ b/varan.cabal
@@ -16,7 +16,7 @@ Executable varan
     Hs-Source-Dirs:  src
     Main-Is:         Main.hs
     Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants, Metrics, Options
-    Build-Depends:   base >= 4 && < 5, random, mtl, parallel, statistics, cmdargs
+    Build-Depends:   base >= 4 && < 5, random, mtl, parallel, statistics, cmdargs, bytestring
     Ghc-Options:     -rtsopts -Wall 
 
 -- For parallel execution, we might want to add these, but they
