--- a/varan.cabal
+++ b/varan.cabal
@@ -1,5 +1,5 @@
 Name:          varan
-Version:       0.2
+Version:       0.3
 License:       GPL
 Cabal-Version: >= 1.6
 Build-Type:    Simple
@@ -17,7 +17,7 @@ Executable varan
     Main-Is:         Main.hs
     Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants, Metrics, Options, ParMap
     Build-Depends:   base >= 4 && < 5, random, mtl, parallel, statistics, cmdargs, bytestring
-    Ghc-Options:     -rtsopts -Wall 
+    Ghc-Options:     -rtsopts -Wall -threaded
 
 -- For parallel execution, we might want to add these, but they
 -- seem to degrade performance on older GHC
