Rename main to Varan.hs, better help output.
Ignore-this: cb8e2d551f4a918bfe8355d6b945c18

darcs-hash:896f65cc061ae4be4c65bdb53abe311dd0f78f4d

--- a/varan.cabal
+++ b/varan.cabal
@@ -14,7 +14,7 @@ Description:   Using Agresti-Coull estimation of confidence interval, report
 
 Executable varan
     Hs-Source-Dirs:  src
-    Main-Is:         Main.hs
+    Main-Is:         Varan.hs
     Other-Modules:   AgrestiCoull, MPileup, RandomSelect, Variants, Metrics, Options, ParMap
     Build-Depends:   base >= 4 && < 5, random, mtl, parallel, statistics, cmdargs, bytestring
     Ghc-Options:     -rtsopts -Wall -threaded
