Add vextr executable to extract consensus sequence
Ignore-this: 2488ecf87404ef790c368a21713224b3
Typical use:
  samtools mpileup -B -r contigXXXX:nnnnn-mmmmm | vextr > out.file

darcs-hash:b73cd7deb25f0861c24f6061f8ce10cdd963763a

--- a/varan.cabal
+++ b/varan.cabal
@@ -19,6 +19,14 @@ Executable varan
     Build-Depends:   base >= 4 && < 5, random, mtl, parallel, statistics, cmdargs, bytestring
     Ghc-Options:     -rtsopts -Wall -threaded
 
+-- this is just a quick hack, should be merged into the program proper
+Executable vextr
+    Hs-Source-Dirs:  src
+    Main-Is:         VExtr.hs
+    Other-Modules:   MPileup, Count
+    Build-Depends:   base >= 4 && < 5, bytestring
+    Ghc-Options:     -rtsopts -Wall -threaded
+
 -- For parallel execution, we might want to add these, but they
 -- seem to degrade performance on older GHC
 -- Ghc-Options: -threaded -with-rtsopts=-N
