--- a/varan.cabal
+++ b/varan.cabal
@@ -24,7 +24,7 @@ Executable vextr
     Hs-Source-Dirs:  src
     Main-Is:         VExtr.hs
     Other-Modules:   MPileup, Count
-    Build-Depends:   base >= 4 && < 5, bytestring
+    Build-Depends:   base >= 4 && < 5, bytestring, cmdargs
     Ghc-Options:     -rtsopts -Wall -threaded
 
 -- For parallel execution, we might want to add these, but they
