--- a/varan.cabal
+++ b/varan.cabal
@@ -27,6 +27,13 @@ Executable vextr
     Build-Depends:   base >= 4 && < 5, bytestring, cmdargs
     Ghc-Options:     -rtsopts -Wall -threaded
 
+Executable sparks
+    Hs-Source-Dirs:  src
+    Main-Is:         Sparks.hs
+    Other-Modules:   MPileup, Count
+    Build-Depends:   base >= 4 && < 5, bytestring, cmdargs, ansi-terminal
+    Ghc-Options:     -rtsopts -Wall -threaded
+
 -- For parallel execution, we might want to add these, but they
 -- seem to degrade performance on older GHC
 -- Ghc-Options: -threaded -with-rtsopts=-N
