--- a/varan.cabal
+++ b/varan.cabal
@@ -25,7 +25,7 @@ Executable vextr
     Main-Is:         VExtr.hs
     Other-Modules:   MPileup, Count
     Build-Depends:   base >= 4 && < 5, bytestring, cmdargs
-    Ghc-Options:     -rtsopts -Wall -threaded
+    Ghc-Options:     -rtsopts -Wall -threaded -main-is VExtr
 
 Executable sparks
     Hs-Source-Dirs:  src
