Add Mpile2SF executable
Ignore-this: bb4db42cdcd1d06dc8d4ebb6e3d6d994

darcs-hash:0c1ea41e4472c01a5b23733fd9e8cbd710fe3c7f

--- a/varan.cabal
+++ b/varan.cabal
@@ -31,3 +31,10 @@ Executable sparks
     Other-Modules:   MPileup, Count
     Build-Depends:   base >= 4 && < 5, bytestring, cmdargs, ansi-terminal
     Ghc-Options:     -rtsopts -Wall -threaded
+
+Executable mp2sf
+    Hs-Source-Dirs:  src
+    Main-Is:         Mpile2SF.hs
+    Other-Modules:   MPileup, Count
+    Build-Depends:   base >= 4 && < 5, bytestring
+    Ghc-Options:     -rtsopts -Wall -threaded
